--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "micro-worker",
-  "version": "0.1.7",
+  "version": "0.1.10",
   "description": "This repository contains a framework that helps create scalable and interconnected nodejs microservices.",
   "main": "index.js",
   "scripts": {
@@ -33,15 +33,14 @@
     "grunt-contrib-coffee": "^0.13.0"
   },
   "dependencies": {
+    "body-parser": "^1.14.0",
     "feathers": "^1.1.1",
     "feathers-client": "^0.2.0",
-    "heartbeats": "^3.1.3",
-    "node-uuid": "^1.4.7",
-    "socket.io-client": "^1.3.7",
+    "feathers-memory": "^0.6.3",
     "feathers-nedb": "^0.1.0",
     "moment": "^2.10.6",
-    "underscore": "^1.8.3",
-    "feathers-client": "^0.2.0",
-    "body-parser": "^1.14.0"
+    "node-uuid": "^1.4.7",
+    "socket.io-client": "^1.3.7",
+    "underscore": "^1.8.3"
   }
 }
