--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "micro-worker",
-  "version": "0.1.16",
+  "version": "0.1.17",
   "description": "This repository contains a framework that helps create scalable and interconnected nodejs microservices.",
   "main": "index.js",
   "scripts": {
@@ -36,6 +36,7 @@
     "body-parser": "^1.14.0",
     "feathers": "^1.1.1",
     "feathers-client": "^0.2.0",
+    "feathers-hooks": "^1.5.2",
     "feathers-memory": "^0.6.3",
     "feathers-nedb": "^0.1.0",
     "moment": "^2.10.6",
